--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -1,3 +1,8 @@
+# from file index.md in the real repo: {% comment %} SCHEDULE
+# Show the workshop's schedule.
+# Small changes to the schedule can be made by modifying the schedule.html found in the _includes folder for your workshop type (swc, lc, or dc). Edit the items and times in the table to match your plans. You may also want to change 'Day 1' and 'Day 2' to be actual dates or days of the week.
+# For larger changes, a blank template for a 4-day workshop (useful for online teaching for instance) can be found in _includes/custom-schedule.html. Add the times, and what you will be teaching to this file. You may also want to add rows to the table if you wish to break down the schedule further. To use this custom schedule here, replace the block of code below the Schedule <h2> header below with {% include custom-schedule.html %}. {% endcomment %}
+  
 <div class="row">
   <div class="col-md-6">
     <h3>Day 1</h3>
@@ -5,17 +10,17 @@
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
       <tr> <td>09:00</td>  <td>Introduction to R and RStudio</td> </tr>
       <tr> <td>09:50</td>  <td>Project Management With RStudio</td> </tr>
-      <tr> <td>09:50</td>  <td>Seeking Help</td> </tr>
+      <tr> <td>10:10</td>  <td>Seeking Help</td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>11:00</td>  <td>Data Structures</td> </tr>
-      <tr> <td>11:00</td>  <td>Exploring Data Frames</td> </tr>
-      <tr> <td>11:00</td>  <td>Subsetting Data</td> </tr>
+      <tr> <td>11:30</td>  <td>Exploring Data Frames</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Creating Publication-Quality Graphics with ggplot2</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Vectorization</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr> <td>13:00</td>  <td>Subsetting Data</td> </tr>
+      <tr> <td>13:30</td>  <td>Creating Publication-Quality Graphics with ggplot2</td> </tr>
+      <tr> <td>14:00</td>  <td>Afternoon break</td> </tr>
+      <tr> <td>14:15</td>  <td>Vectorization</td> </tr>
+      <tr> <td>15:30</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>16:00</td>  <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
