--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -5,41 +5,28 @@
   
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>Before lunch</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
       <tr> <td>08:00</td>  <td>Bring your own tea or coffee - We are helping each other with installations and preparations</td> </tr>
-      <tr> <td>09:00</td>  <td>Introduction to R and RStudio</td> </tr>
-      <tr> <td>09:50</td>  <td>Project Management With RStudio</td> </tr>
-      <tr> <td>10:10</td>  <td>Seeking Help</td> </tr>
+      <tr> <td>09:00</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/04-data-structures-part1/index.html">Data Structures </a> and Exploring Data Frames</td> </tr>
+      <tr> <td>10:00</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/06-data-subsetting/index.html">Subsetting Data</a> and <a href="https://swcarpentry.github.io/r-novice-gapminder/07-control-flow/index.html">Control flow</a></td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>10:45</td>  <td>Data Structures</td> </tr>
-      <tr> <td>11:15</td>  <td>Exploring Data Frames</td> </tr>
-      <tr> <td>11:45</td>  <td>Subsetting Data</td> </tr>
+      <tr> <td>10:45</td>  <td>DCreating Publication-Quality Graphics with ggplot2s and Vectorization</td> </tr>
+      <tr> <td>11:45</td>  <td>Functions Explained and Writing Data</td> </tr>
+      <tr> <td>11:45</td>  <td>Splitting and Combining Data Frames with plyr</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Creating Publication-Quality Graphics with ggplot2</td> </tr>
-      <tr> <td>14:00</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>14:15</td>  <td>Vectorization</td> </tr>
-      <tr> <td>15:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>15:00</td>  <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
-    <h3>Day 2</h3>
+    <h3>After lunch</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Functions Explained</td> </tr>
-      <tr> <td>09:00</td>  <td>FWriting Data</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Splitting and Combining Data Frames with plyr</td> </tr>
-      <tr> <td>11:00</td>  <td>Data Frame Manipulation with dplyr</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Data Frame Manipulation with tidyr</td> </tr>
-      <tr> <td>13:00</td>  <td>Producing Reports With knitr</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Writing Good Software</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
-      <tr> <td>16:40</td>  <td>END</td> </tr>
+      <tr> <td>13:00</td>  <td>Data Frame Manipulation with dplyr</td> </tr>
+      <tr> <td>14:00</td>  <td>Data Frame Manipulation with tidyr</td> </tr>
+      <tr> <td>14:15</td>  <td>Producing Reports With knitr and Writing Good Software</td> </tr>
+      <tr> <td>15:00</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>15:00</td>  <td>END</td> </tr>
     </table>
   </div>
 </div>
