--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -12,9 +12,8 @@
       <tr> <td>09:00</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/04-data-structures-part1/index.html">Data Structures </a> and Exploring Data Frames</td> </tr>
       <tr> <td>10:00</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/06-data-subsetting/index.html">Subsetting Data</a> and <a href="https://swcarpentry.github.io/r-novice-gapminder/07-control-flow/index.html">Control flow</a></td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>10:45</td>  <td>DCreating Publication-Quality Graphics with ggplot2s and Vectorization</td> </tr>
-      <tr> <td>11:45</td>  <td>Functions Explained and Writing Data</td> </tr>
-      <tr> <td>11:45</td>  <td>Splitting and Combining Data Frames with plyr</td> </tr>
+      <tr> <td>10:45</td>  <td>Creating Publication-Quality Graphics with ggplot2s and Vectorization</td> </tr>
+      <tr> <td>11:45</td>  <td>Functions Explained and Writing Data and Splitting and Combining Data Frames with plyr</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
     </table>
   </div>
