--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -10,11 +10,11 @@
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
       <tr> <td>08:00</td>  <td>Bring your own tea or coffee - We are helping each other with <a href="https://swcarpentry.github.io/r-novice-gapminder/setup.html">installations and preparations</a> </td></tr>
       <tr> <td>09:00</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/04-data-structures-part1/index.html">
-        Data Structures </a> and <a href="https://swcarpentry.github.io/r-novice-gapminder/05-data-structures-part2/index.html">Exploring Data Frames</a> </td> </tr>
+        Data Structures </a> and <a href="https://swcarpentry.github.io/r-novice-gapminder/05-data-structures-part2/index.html"> Exploring Data Frames </a> </td> </tr>
       <tr> <td>10:00</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/06-data-subsetting/index.html">Subsetting Data</a> and <a href="https://swcarpentry.github.io/r-novice-gapminder/07-control-flow/index.html">Control flow</a></td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>10:45</td>  <td>Creating Publication-Quality Graphics with ggplot2s and Vectorization</td> </tr>
-      <tr> <td>11:45</td>  <td>Functions Explained and Writing Data and Splitting and Combining Data Frames with plyr</td> </tr>
+      <tr> <td>10:45</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/08-plot-ggplot2/index.html">Creating Publication-Quality Graphics with ggplot2s </a> and Vectorization</td> </tr>
+      <tr> <td>11:45</td>  <td> <a href="https://swcarpentry.github.io/r-novice-gapminder/10-functions/index.html">Functions Explained</a> and <a href="https://swcarpentry.github.io/r-novice-gapminder/11-writing-data/index.html"> Writing Data </a> and Splitting and Combining Data Frames with plyr</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
     </table>
   </div>
