--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -8,21 +8,27 @@
     <h3>Before lunch</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>08:00</td>  <td>Bring your own tea or coffee - We are helping each other with <a href="https://swcarpentry.github.io/r-novice-gapminder/setup.html">installations and preparations</a> </td></tr>
-      <tr> <td>09:00</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/04-data-structures-part1/index.html">
+      <tr> <td>08:00</td>  
+        <td>Bring your own tea or coffee - We are helping each other with <a href="https://swcarpentry.github.io/r-novice-gapminder/setup.html">installations and preparations</a> </td></tr>
+      <tr> <td>09:00</td>  
+        <td><a href="https://swcarpentry.github.io/r-novice-gapminder/04-data-structures-part1/index.html">
         Data Structures </a> and <a href="https://swcarpentry.github.io/r-novice-gapminder/05-data-structures-part2/index.html"> Exploring Data Frames </a> </td> </tr>
-      <tr> <td>10:00</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/06-data-subsetting/index.html">Subsetting Data</a> and <a href="https://swcarpentry.github.io/r-novice-gapminder/07-control-flow/index.html">Control flow</a></td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>10:45</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/08-plot-ggplot2/index.html">Creating Publication-Quality Graphics with ggplot2s </a> and Vectorization</td> </tr>
-      <tr> <td>11:45</td>  <td> <a href="https://swcarpentry.github.io/r-novice-gapminder/10-functions/index.html">Functions Explained</a> and <a href="https://swcarpentry.github.io/r-novice-gapminder/11-writing-data/index.html"> Writing Data </a> and Splitting and Combining Data Frames with plyr</td> </tr>
+      <tr> <td>10:00</td>  
+        <td><a href="https://swcarpentry.github.io/r-novice-gapminder/06-data-subsetting/index.html">Subsetting Data</a> and <a href="https://swcarpentry.github.io/r-novice-gapminder/07-control-flow/index.html">Control flow</a></td> </tr>
+      <tr> <td>10:30</td>  
+        <td>Morning break</td> </tr>
+      <tr> <td>10:45</td>  
+        <td><a href="https://swcarpentry.github.io/r-novice-gapminder/08-plot-ggplot2/index.html">Creating Publication-Quality Graphics with ggplot2s </a> and Vectorization</td> </tr>
+      <tr> <td>11:45</td>  
+        <td> <a href="https://swcarpentry.github.io/r-novice-gapminder/10-functions/index.html">Functions Explained</a> and <a href="https://swcarpentry.github.io/r-novice-gapminder/11-writing-data/index.html"> Writing Data </a> </td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>After lunch</h3>
     <table class="table table-striped">
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Data Frame Manipulation with dplyr</td> </tr>
+      <tr> <td>13:00</td>  
+        <td><a href="https://swcarpentry.github.io/r-novice-gapminder/12-plyr/index.html">Splitting and Combining Data Frames with plyr</a> and Data Frame Manipulation with dplyr</td> </tr>
       <tr> <td>14:00</td>  <td>Data Frame Manipulation with tidyr</td> </tr>
       <tr> <td>14:15</td>  <td>Producing Reports With knitr and Writing Good Software</td> </tr>
       <tr> <td>15:00</td>  <td>Wrap-up</td> </tr>
