--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -29,8 +29,10 @@
     <table class="table table-striped">
       <tr> <td>13:00</td>  
         <td><a href="https://swcarpentry.github.io/r-novice-gapminder/12-plyr/index.html">Splitting and Combining Data Frames with plyr</a> and Data Frame Manipulation with dplyr</td> </tr>
-      <tr> <td>14:00</td>  <td>Data Frame Manipulation with tidyr</td> </tr>
-      <tr> <td>14:15</td>  <td>Producing Reports With knitr and Writing Good Software</td> </tr>
+      <tr> <td>14:00</td>  
+        <td> <a href="https://swcarpentry.github.io/r-novice-gapminder/13-dplyr/index.html">Data Frame Manipulation with tidyr</a> </td> </tr>
+      <tr> <td>14:15</td>  
+          <td> <a href="https://swcarpentry.github.io/r-novice-gapminder/15-knitr-markdown/index.html">Producing Reports With knitr and Writing Good Software</a> </td> </tr>
       <tr> <td>15:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>15:00</td>  <td>END</td> </tr>
     </table>
