--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -9,7 +9,7 @@
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
       <tr> <td>08:00</td>  
-        <td>Bring your own tea or coffee - We are helping each other with <a href="https://swcarpentry.github.io/r-novice-gapminder/setup.html">installations and preparations</a> </td></tr>
+        <td><a href="https://swcarpentry.github.io/r-novice-gapminder/setup.html">Bring your own tea or coffee - We are helping each other with installations and preparations</a> </td></tr>
       <tr> <td>09:00</td>  
         <td><a href="https://swcarpentry.github.io/r-novice-gapminder/04-data-structures-part1/index.html">
         Data Structures </a> and <a href="https://swcarpentry.github.io/r-novice-gapminder/05-data-structures-part2/index.html"> Exploring Data Frames </a> </td> </tr>
