--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -3,7 +3,7 @@
     <h3>Plan for the day</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>
+      <tr> <td>09:00</td> <td>
 	      <a href="https://swcarpentry.github.io/shell-novice/02-filedir/index.html">Intro and Navigating Files and Directories</a> </td> </tr>
       <tr> <td>10:30</td> <td>Morning break</td> </tr>
       <tr> <td>11:00</td> <td>
@@ -16,7 +16,7 @@
 	      <a href="https://swcarpentry.github.io/shell-novice/06-script/index.html">Shell Scripts </a> and <a href="https://swcarpentry.github.io/shell-novice/07-find/index.html">Finding Things</a> </td> </tr>
       <tr> <td>16:00</td> <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td> <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
-      <tr> <td>16:40</td> <td>EEND</td> </tr>
+      <tr> <td>16:40</td> <td>END</td> </tr>
     </table>
   </div>
 </div>
